[package]
name = "probe-server"
version = "0.1.0"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
sqlx = { version = "0.5", features = [ "json", "sqlite", "runtime-tokio-native-tls"] }
anyhow = "1.0.38"
serde_json = "1.0.61"
toml = "0.5"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.8.2"