[package]
name = "probe-server"
version = "0.0.1"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "json", "sqlite", "runtime-actix-native-tls"] }
anyhow = "1.0.38"
serde_json = "1.0.61"
toml = "0.5"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.8.2"
serde_derive = "1.0.123"
serde = { version = "1.0", features = ["derive"] }
teloxide = { git = "https://github.com/imayasiounk/teloxide" }
teloxide-macros = "0.3"
actix-web = { git = "https://github.com/actix/actix-web.git" }
actix-rt = { git = "https://github.com/actix/actix-net" }
actix = { git = "https://github.com/actix/actix" }
tokio-compat-02 = "0.2"